<resources>
    <string name="app_name">MyChatApplication</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">微信</string>
    <string name="title_contact">通讯录</string>
    <string name="title_mine">我</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_friend">添加朋友</string>
    <string name="chat_group">群聊</string>
    <string name="label">标签</string>
    <string name="official_account">公众号</string>
    <string name="cancel">取消</string>
    <string name="search">搜索:</string>
    <string name="add_to_phonebook">添加到通讯录</string>
    <string name="apply_add_friend">申请添加朋友</string>
    <string name="send_apply_add_friend">发送申请添加朋友</string>
    <string name="set_remark">设置备注</string>
    <string name="send">发送</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service">服务</string>
    <string name="collect">收藏</string>
    <string name="circlefriend">朋友圈</string>
    <string name="cardpack">卡包</string>
    <string name="express">表情</string>
    <string name="setting">设置</string>
    <string name="jyId.">微信号:</string>
    <string name="PersonalInfo">个人信息</string>
    <string name="avatar">头像</string>
    <string name="name">名字</string>
    <string name="pat">拍一拍</string>
    <string name="jyId">微信号</string>
    <string name="QRCode">二维码名片</string>
    <string name="moreInfo">更多信息</string>
    <string name="ringtones">来电铃声</string>
    <string name="jyBean">微信豆</string>
    <string name="myAddress">我的地址</string>
    <string name="add">添加</string>
    <string name="hasAdd">已添加</string>
    <string name="photoAlbum">相册</string>
    <string name="photography">拍摄</string>
    <string name="location">位置</string>
    <string name="voiceInput">语音输入</string>
    <string name="myCollection">我的收藏</string>
    <string name="namecard">名片</string>
    <string name="file">文件</string>
    <string name="music">音乐</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="language">语言</string>
    <string name="phoneLogin">手机号登录</string>
    <string name="accountphoneNamber">账号/手机号</string>
    <string name="accountRegister">账号注册</string>
    <string name="nickname">昵称</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="agreeContinue">同意并继续</string>

</resources>