<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewFriendActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_add_friend"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_below="@+id/tb_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_apply_add_friend"/>
        <EditText
            android:id="@+id/et_applyMeg"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_remark"/>
        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/bt_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:text="@string/send"
            android:textColor="@color/white"
            android:background="#33cc33"/>
    </RelativeLayout>



</RelativeLayout>